# GameOff2018

./: CMakeLists.txt  Main.cpp  README.md  notes.txt
src/: ActiveItem.h  ActiveNPC.h  Agent.h  Blink.h  BulletScene.cpp  BulletScene.h  CharacterSample.h  CharacterSample2.h  CharacterSample3.h  CharacterSample4.h  CharacterSample5.h  Chicken.h  ChickenMob.h  CoinScene.cpp  CoinScene.h  Context.cpp  Context0.cpp  Context0.h  Continuity.h  ConvoManager.cpp  ConvoManager.h  Enemy.h  EnemySample.h  EnemySkeleton.h  EnemySlime.h  GameOffContext.cpp  GameOffContext.h  Gem.cpp  Gem.h  MessageManager.h  Projectile.cpp  Projectile.h  SinbadCharacterController2.h  SinbadCharacterController3.h  SinbadCharacterController4.h  SinbadCharacterController5.h  SinbadCharacterController6.h  StatsManager.cpp  StatsManager.h  StatsPanel.h  (+8 more)
src/btOgre/: btOgreExtras.hpp  btOgreGP.hpp  btOgreSoftBody.cpp  btOgreSoftBody.hpp
tools/: Animation.cpp  Animation.hpp
